fix: overflow body

--- a/tribos-ux/components/Forms/styles/CadastroForm1.module.scss
+++ b/tribos-ux/components/Forms/styles/CadastroForm1.module.scss
@@ -1,101 +1,5 @@
 @use 'styles/variables';
 
-.dashboard_form_container {
-  font-family: variables.$font-family-base;
-  color: variables.$secondary-color-primary-dark;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  gap: 1.5rem 2rem;
-  grid-template-areas:
-    'dashboard_form_nome_input .'
-    'dashboard_form_cidade_input dashboard_form_estado_input'
-    'dashboard_form_descricao_input .'
-    'dashboard_form_linkedin_input dashboard_form_portfolio_input';
+.dashboard_form {
+  
 }
-
-.dashboard_form_nome_input {
-  @include variables.forms-inputs(325px);
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_nome_input;
-}
-
-.dashboard_form_cidade_input {
-  @include variables.forms-inputs(325px);
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_cidade_input;
-}
-
-.dashboard_form_estado_input {
-  @include variables.forms-inputs(325px);
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_estado_input;
-}
-
-.dashboard_form_descricao_input {
-  @include variables.forms-inputs(325px);
-  resize: vertical;
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_descricao_input;
-}
-
-.dashboard_form_linkedin_input {
-  @include variables.forms-inputs(325px);
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_linkedin_input;
-}
-
-.dashboard_form_portfolio_input {
-  @include variables.forms-inputs(325px);
-  height: 100%;
-  max-height: 56px;
-  grid-area: dashboard_form_portfolio_input;
-}
-
-.dashboard_form_upload_input {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 483px;
-  margin: 1.5rem 0 1.5rem 0;
-
-  span {
-    width: 100%;
-    font-family: variables.$font-family-base;
-    color: variables.$secondary-color-primary-dark;
-  }
-
-  input[type='file'] {
-    display: none;
-  }
-
-  label {
-    width: 100%;
-    min-width: max-content;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.5rem 2rem;
-    color: variables.$primary-color-pure;
-    background-color: #fbfbfc;
-    font-family: variables.$font-family-base;
-    font-size: 1.2rem;
-    border-radius: 1rem;
-    border: 1px solid variables.$secondary-color-pure;
-    transition: ease-in-out 0.25s;
-    cursor: pointer;
-
-    &:hover {
-      color: variables.$neutral-color-high-pure;
-      background-color: variables.$primary-color-pure;
-    }
-  }
-}
-
-
