--- a/tribos-ux/styles/globals.scss
+++ b/tribos-ux/styles/globals.scss
@@ -12,6 +12,7 @@ html {
 
 body {
   width: 100vw;
+  overflow-x: hidden;
 }
 
 button {
